<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:adjustViewBounds="true"
    app:cardCornerRadius="8dp"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbFavourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:button="@drawable/favourite_checkbox" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dummy_desc"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/sync"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteDescription" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>